[package]
name = "quantum_chemistry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gaussian_basis = {git = "https://github.com/MarcusTL12/gaussian_basis_rust"}
rayon = "1.5"
ndarray = "0.15"
ndarray-linalg = "0.14"

[dev-dependencies]
num_cpus = "1.13"
clap = {version = "3.2", features = ["derive", "cargo"]}
ndarray = "0.15"
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
